# Repl.itJam10

./: README.md  challenges.py  main.py  pyproject.toml  submissions.py  users.py
blueprints/: auth.py  challenge.py
static/: challenge.js  create_challenge.js  index.css
templates/: base.j2
templates/components/: challenge.j2  challenges.j2  submissions.j2
templates/pages/: 404.j2  auth.j2  challenge.j2  create.j2  home.j2  user.j2
